# advent-of-code

2023/: Cargo.toml  day-01.bench.txt  day-02.bench.txt  day-05.bench.txt  day-10.bench.txt  justfile
2023/daily-template/: Cargo.toml
2023/day-01/src/: part1.rs  part2.rs
2023/day-02/: Cargo.toml
2023/day-02/src/: part2.rs
2023/day-03/: Cargo.toml
2023/day-03/src/: part1.rs  part2.rs
2023/day-04/: Cargo.toml
2023/day-04/src/: part1.rs  part2.rs
2023/day-05/: Cargo.toml
2023/day-05/src/: part1.rs  part2.rs
2023/day-06/: Cargo.toml
2023/day-06/src/: part1.rs  part2.rs
2023/day-07/: Cargo.toml
2023/day-07/src/: part1.rs  part2.rs
2023/day-08/: Cargo.toml
2023/day-08/src/: part1.rs  part2.rs
2023/day-09/: Cargo.toml
2023/day-09/src/: part1.rs  part2.rs
2023/day-10/: Cargo.toml
2023/day-10/src/: part1.rs
2023/day-11/: Cargo.toml
2023/day-11/src/: part1.rs  part2.rs
2023/day-12/: Cargo.toml
2023/day-12/src/: part1.rs  part2.rs
2024/rust/1/: Cargo.toml
2024/rust/1/benches/: benchmarks.rs
2024/rust/daily-template/: Cargo.toml
2024/rust/day-01/: Cargo.toml
