[package]
name = "day-03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
tracing = { workspace = true }
nom = {workspace = true }
tracing-subscriber = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
dhat = { workspace = true }
glam = "0.24.2"
nom_locate = "4.2.0"

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "day-03"
path = "benches/benchmarks.rs"
harness = false

[features]
dhat-heap = []
